# pdcd

./: .gitignore  CHANGELOG.md  Makefile  README.md  example_config.yml  pyproject.toml
.github/workflows/: python-publish.yml
docs/: Config.md  Connectors.md  Logs.md  Payloads.md  README.md  Settings.md  Troubleshooting.md
pdcd/: cli.py  config.py  connectors.py  external.py  files.py  jobs.py  log.py  routines.py  settings.py  shellcode.py  utils.py
