[tool.poetry]
name = "pdcd"
version = "1.0.1"
description = "Tool that orchestrates executing Docker containers to build payloads"
authors = ["2XXE <root@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docker = "^5.0.0"
desert = "^2020.11.18"
PyYAML = "^5.4.1"
boto3 = "^1.24.54"
impacket = "^0.10.0"
click = "^8.1.3"
mythic = "^0.0.38"
pydantic = "^1.10.5"

[tool.poetry.dev-dependencies]
black = "^22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdcd = "pdcd.cli:main"


