[tool.poetry]
name = "pdcd"
version = "1.2.1"
description = "Tool that orchestrates executing Docker containers to build payloads"
authors = ["2XXE <root@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docker = "^7.1.0"
desert = "^2022.9.22"
pyyaml = "^6.0.2"
boto3 = "^1.35.47"
impacket = "^0.12.0"
click = "^8.1.7"
mythic = "^0.2.5"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdcd = "pdcd.cli:main"


